--- a/css/agency.css
+++ b/css/agency.css
@@ -519,6 +519,10 @@ section h3.section-subheading {
   text-align: center
 }
 
+.timeline>li .story:hover {
+  border: 7px solid #fed136;
+}
+
 .timeline>li .timeline-image h4 {
   font-size: 10px;
   margin-top: 12px;
