--- a/css/agency.css
+++ b/css/agency.css
@@ -254,7 +254,7 @@ fieldset[disabled] .btn-xl.active {
 
 @media (min-width: 992px) {
   .navbar-default.navbar-shrink .navbar-brand {
-    font-size: 1.5em;
+    /*font-size: 1.5em;*/
   }
 }
 
@@ -600,7 +600,7 @@ section h3.section-subheading {
   }
 }
 
-@media (min-width:992px) {
+/*@media (min-width:992px) {
   .timeline>li {
     min-height: 150px
   }
@@ -621,7 +621,7 @@ section h3.section-subheading {
     padding: 0 20px 20px
   }
 }
-
+*/
 @media (min-width:1200px) {
   .timeline>li {
     min-height: 170px
@@ -691,7 +691,7 @@ section#contact .form-group input.form-control {
 }
 
 section#contact .form-group textarea.form-control {
-  height: 236px
+  height: 149px;
 }
 
 section#contact .form-control:focus {
@@ -937,6 +937,13 @@ blockquote p {
   /*border-radius: 120px;*/
 }
 
+.seun {
+  background: url(../img/team/seun.jpg) no-repeat center center;
+  background-size: cover;
+  height: 240px;
+  width: 240px;
+  /*border-radius: 120px;*/
+}
 
 .yomi {
   background: url(../img/team/yomi.jpg) no-repeat center center;
@@ -1060,6 +1067,16 @@ blockquote p {
   background-size: cover;
   height: 240px;
   width: 240px;
+  /*mar*/
+}
+
+p.text-muted.speaker-title {
+  margin: 0 0 3px;
+  font-size: 11px;
+}
+
+.hackathon {
+  height: 62px;
 }
 
 
