--- a/css/agency.css
+++ b/css/agency.css
@@ -1063,7 +1063,7 @@ blockquote p {
 }
 
 .omowunmi {
-  background: url(../img/team/omowunmi.jpg) no-repeat center center;
+  background: url(../img/team/Omowunmi.jpg) no-repeat center center;
   background-size: cover;
   height: 240px;
   width: 240px;
