--- a/css/agency.css
+++ b/css/agency.css
@@ -961,6 +961,14 @@ blockquote p {
   /*border-radius: 120px;*/
 }
 
+.kuti {
+  background: url(../img/team/kuti.jpg) no-repeat center top;
+  background-size: cover;
+  height: 240px;
+  width: 240px;
+  /*border-radius: 120px;*/
+}
+
 .iyin {
   background: url(../img/team/aboyeji.jpg) no-repeat center center;
   background-size: cover;
